--- a/qData/index.html
+++ b/qData/index.html
@@ -13,8 +13,8 @@
     <style> 
     body {padding: 0; margin: 0;} canvas {vertical-align: top;}
     
-    .countryName {
-      font-weight: 700;
+    .countryRows {
+      border-bottom: 1px dotted #000000;
     }
     </style>
   </head>
