--- a/qData/testing/index.html
+++ b/qData/testing/index.html
@@ -10,9 +10,7 @@
 
     <script src="sketch.js" type="text/javascript"></script>
 
-    <style> 
-    body {padding: 0; margin: 0;} canvas {vertical-align: top;}
-    </style>
+    <style> body {padding: 0; margin: 0;} canvas {vertical-align: top;} </style>
   </head>
   <body>
   </body>
