--- a/qualData/index.html
+++ b/qualData/index.html
@@ -24,7 +24,7 @@
         vertical-align: top;
       }
       
-      #countries {
+      .countries {
         font-family: 'Noto Sans', sans-serif;
       }
     </style>
