working on interactivity

--- a/qualData/index.html
+++ b/qualData/index.html
@@ -10,9 +10,7 @@
 
     <script src="sketch.js" type="text/javascript"></script>
     
-    <style>
-    @import 'https://fonts.googleapis.com/css?family=Noto+Sans|Noto+Serif';
-    </style>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans|Noto+Serif" rel="stylesheet">
 
     <style>
       body {
