--- a/qualData/index.html
+++ b/qualData/index.html
@@ -7,6 +7,8 @@
 
     <script src="libraries/p5.dom.js" type="text/javascript"></script>
     <!--<script src="libraries/p5.sound.js" type="text/javascript"></script>-->
+    <script src="libraries/rita-full.min.js" type="text/javascript"></script>
+
 
     <script src="sketch.1.js" type="text/javascript"></script>
     
