clean up file structure, add twoCanvases exercise

--- a/exercises/leaflet/index.html
+++ b/exercises/leaflet/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <script src="https://unpkg.com/leaflet@1.0.1/dist/leaflet.js"></script>
-        <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />
+        <!--<link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.1/dist/leaflet.css" />-->
         
         <script src='https://api.tiles.mapbox.com/mapbox.js/v2.4.0/mapbox.js'></script>
         <link href='https://api.tiles.mapbox.com/mapbox.js/v2.4.0/mapbox.css' rel='stylesheet' />
@@ -22,6 +22,6 @@
         </style>
     </head>
     <body>
-        <div id="map"></div>
+        <div id="leafletMap"></div>
     </body>
 </html>
