--- a/a3.1/index.html
+++ b/a3.1/index.html
@@ -98,14 +98,14 @@
             text-align: right;
         }
         
-        #indicator {
-            background: none;
-            border: none;
-            border-radius: none;
-            width: 226px;
-            font-size: 22px;
-            text-decoration: underline;
-        }
+        /*#indicator {*/
+        /*    background: none;*/
+        /*    border: none;*/
+        /*    border-radius: none;*/
+        /*    width: 226px;*/
+        /*    font-size: 22px;*/
+        /*    text-decoration: underline;*/
+        /*}*/
     </style>
 </head>
 
