updating a3 with dynamic headline width

--- a/a3/index.html
+++ b/a3/index.html
@@ -14,12 +14,12 @@
     </body>
 	<div class="graph-div-filter ">
 		<div class="filter">
-		How does
-			<select id="indicator" onchange="drawVisual(false)"> </select><i class="fa fa-chevron-down"></i>
+		How does&nbsp
+			<span id="iSelect"><select id="indicator" onchange="drawVisual(false)"> </select></span>
 		</div>
 		<div class="filter">
-		impact democracy in
-			<select id="region" onchange="drawVisual(true)"> </select><i class="fa fa-chevron-down"></i>
+		impact democracy in&nbsp
+			<span id="rSelect"><select id="region" onchange="drawVisual(true)"> </select></span>
 		Africa?
 		</div>
 	</div>
