update country overviews, popovers, titles, second layer

--- a/a4/index.html
+++ b/a4/index.html
@@ -29,12 +29,29 @@
             </div>
         </div>
         <div class="row">
+            <div class="col-xs-12 subtitle" id="subtitle">
+                <!--Democracy Levels vs Governance Indicator Scores in Sub-Saharan Africa-->
+            </div>
+        </div>
+        <div class="row">
             <div class="col-xs-12">
                 <div class="colscroll">
                     <div class="visualization" id="visualization"></div>
                 </div>
                 <div class="colnoscroll">
                     <div class="overlay" id="overlay "></div>
+                </div>
+            </div>
+        </div>
+        <div class="row info">
+            <div class="col-sm-7">
+                <div class="left" id="iLeft">
+                </div>
+            </div>
+            <div class="hidden-xs col-sm-1"></div>
+            <div class="col-sm-4">
+                <div class="left" id="iRight">
+                    
                 </div>
             </div>
         </div>
