update styling and header positioning, add button for gini, add gini data and expand y-axis on top graph, add popover to explain (still doesn't work on dropdown change), update styling of country info, making friends with mobile

--- a/a4/index.html
+++ b/a4/index.html
@@ -25,12 +25,14 @@
                     How does democracy impact
                     <span id="iSelect"><select id="indicator" onchange="drawVisual(false)"> </select></span> in
                     <span id="rSelect"><select id="region" onchange="drawVisual(true)"> </select></span> Africa?
+                    <!--Show Subtitle/Description-->
+                    <div id="description">Sub-Saharan Africa is transitioning toward more democratic leadership (four full electoral democracies in 1990 to twenty in 2016, according to Freedom House), which plays an important role in the governance of a country. This visualization explores the relationship between a country’s democratic score and its estimated score in six World Governance Indicators, and compares both to the inequality coefficient (GINI).</div>
                 </div>
             </div>
         </div>
         <div class="row">
             <div class="col-xs-12 subtitle" id="subtitle">
-                <!--Democracy Levels vs Governance Indicator Scores in Sub-Saharan Africa-->
+                <!--Show Averages and Show Gini Buttons-->
             </div>
         </div>
         <div class="row">
